@@ -1,0 +1,25 @@
+
+# ########################################################################
+# Report grouped by tables
+# ########################################################################
+
+# Item 1: 0.03 QPS, 0.05x concurrency, ID 0x1161D7068EB79526 at byte 359 _
+#              pct   total     min     max     avg     95%  stddev  median
+# Count        100       2
+# Exec time    100      4s      2s      2s      2s      2s       0      2s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent    100       2       1       1       1       1       0       1
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1    root
+# Databases      2 sakila (1), test (1)
+# Time range 2007-10-15 21:43:52 to 2007-10-15 21:45:10
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s  ################################################################
+#  10s+
+test.n
